force-app/main/default/objects/LLC_BI__DocManager__c/LLC_BI__DocManager__c.object-meta.xml
<CustomObject>
    <label>DocManager</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocManagers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>