force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__Team_Sharing_Context__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Team_Sharing_Context__c</fullName>
    <description>The user populates this text field to determine which custom team object the Document Manager record references. By default, this field is blank.</description>
    <inlineHelpText>Enter the name of the custom team object to reference.</inlineHelpText>
    <label>Team Sharing Context</label>
    <length>60</length>
    <type>Text</type>
</CustomField>