force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__templateFileName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__templateFileName__c</fullName>
    <description>This field is not currently used.</description>
    <label>templateFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>