force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is optional and automatically populated. It indicates what object the Document Manager is on (for example, LLC_BI__Loan__c).</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>