force-app/main/default/objects/LLC_BI__DocManager__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__docStore__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <columns>LLC_BI__namespacePrefix__c</columns>
    <columns>LLC_BI__templateFileName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>